chore: commit current staged changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -85,5 +85,10 @@
     "**/*.test.tsx",
     "**/*.spec.ts",
     "**/*.spec.tsx"
+    ,
+    "prisma/**/*.ts",
+    "prisma/**/*.tsx",
+    "scripts/**/*.ts",
+    "scripts/**/*.tsx"
   ]
 }
