feat(family-portal): implement Notes, Galleries, Members, Activity APIs; add Note/Gallery/Invite modals; integrate tabs on Family page; update Dockerfile to use legacy peer deps; start dev server on port 5000

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -14,7 +14,7 @@ ENV NODE_ENV=production
 
 # Install dependencies first (for better layer caching)
 COPY package.json package-lock.json ./
-RUN npm ci --only=production
+RUN npm ci --omit=dev --legacy-peer-deps
 
 # Copy application code
 COPY . .
