calendar: add CALENDAR_USE_MOCKS flag, implement DB-backed operations with mock fallback; seed: generate sample appointments and participants; env: document flag in .env files [Droid]

--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,9 @@ STRIPE_WEBHOOK_SECRET=whsec_your-stripe-webhook-secret
 # S3_REGION=us-west-2
 # AWS_ACCESS_KEY_ID=your-aws-access-key
 # AWS_SECRET_ACCESS_KEY=your-aws-secret-key
+
+# =============================================
+# Calendar Feature Flags
+# =============================================
+# Use mock calendar data instead of database. Set to false to use DB.
+CALENDAR_USE_MOCKS=true
