feat(notifications): add Twilio SMS, Prisma-backed web push, cron rate limiting, reminders improvements, and UI for reminders + notifications history

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "stripe": "^14.5.0",
+    "twilio": "^5.8.2",
     "uuid": "^9.0.1",
     "web-push": "^3.6.7",
     "zod": "^3.25.76"
