--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,7 @@ services:
   # MinIO S3-compatible storage for HIPAA-compliant document storage
   minio:
     image: minio/minio:RELEASE.2023-09-30T07-02-29Z
+    platform: linux/amd64
     container_name: carelinkai-minio
     restart: unless-stopped
     environment:
