--- a/package.json
+++ b/package.json
@@ -104,10 +104,18 @@
     "prettier-plugin-tailwindcss": "^0.5.7",
     "prisma": "^5.9.0",
     "tailwindcss": "^3.3.5",
+    "ts-jest": "^29.4.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    }
   }
 }
