feat(marketplace): add feature flag and navigation entry; implement categories and listings APIs; add marketplace pages and listing actions; applications creation endpoint

--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,9 @@ STRIPE_WEBHOOK_SECRET=whsec_your-stripe-webhook-secret
 # S3_REGION=us-west-2
 # AWS_ACCESS_KEY_ID=your-aws-access-key
 # AWS_SECRET_ACCESS_KEY=your-aws-secret-key
+
+# =============================================
+# Marketplace Feature Flag
+# =============================================
+# Toggle Marketplace module (true = enabled, false = disabled)
+NEXT_PUBLIC_MARKETPLACE_ENABLED=true
