--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/nodemailer": "^6.4.17",
     "archiver": "^7.0.1",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.0",
