chore(test): exclude e2e folder from Jest to avoid Playwright collisions [Droid-assisted]

--- a/package.json
+++ b/package.json
@@ -119,6 +119,9 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
+    "testPathIgnorePatterns": [
+      "<rootDir>/e2e/"
+    ],
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/src/$1"
     }
