--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,8 @@ jobs:
       - run: npm run lint
       - run: npm test --silent
       - run: npm run build
-      - name: Install Playwright Browsers
-        uses: microsoft/playwright-github-action@v1
+      - name: Install Playwright (Chromium only)
+        run: npx playwright install --with-deps chromium
       - name: E2E tests (Playwright)
         run: npm run test:e2e
         env:
