--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
+    "prisma:deploy": "prisma migrate deploy",
     "prisma:studio": "prisma studio",
     "seed": "ts-node --transpile-only prisma/seed.ts",
     "seed:marketplace-demo": "ts-node --transpile-only prisma/seed-marketplace-demo.ts",
@@ -37,6 +38,7 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^5.9.0",
     "@sendgrid/mail": "^8.1.5",
+    "@sentry/nextjs": "7.120.4",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
