--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
-      - '5433:5432'
+      - '${POSTGRES_PORT:-5434}:5432'
     volumes:
       - db_data:/var/lib/postgresql/data
 
