docs(env): update .env.example for S3/MinIO, Redis rate limiting, Sentry, sockets, E2E flag (Droid-assisted)

--- a/.env.example
+++ b/.env.example
@@ -59,14 +59,52 @@ STRIPE_WEBHOOK_SECRET=whsec_your-stripe-webhook-secret
 # =============================================
 # Storage Configuration (for file uploads)
 # =============================================
-# AWS S3 Configuration
-# S3_BUCKET_NAME=carelinkai-storage
-# S3_REGION=us-west-2
-# AWS_ACCESS_KEY_ID=your-aws-access-key
-# AWS_SECRET_ACCESS_KEY=your-aws-secret-key
+# S3 / MinIO configuration (private bucket required)
+# For AWS S3, omit S3_ENDPOINT and leave S3_FORCE_PATH_STYLE=true or false per your setup
+# For MinIO (local/dev), set S3_ENDPOINT (e.g., http://localhost:9002) and S3_FORCE_PATH_STYLE=true
+S3_BUCKET=carelinkai-storage
+S3_REGION=us-east-1
+# Optional: set when using MinIO or custom S3-compatible endpoint
+# S3_ENDPOINT=http://localhost:9002
+S3_FORCE_PATH_STYLE=true
+# Credentials (for AWS use IAM keys; for MinIO use access key / secret key)
+S3_ACCESS_KEY_ID=your-access-key
+S3_SECRET_ACCESS_KEY=your-secret-key
+# Enable server-side encryption (AES256) on uploads
+S3_ENABLE_SSE=true
+
+# =============================================
+# Rate Limiting (Redis optional; falls back to in-memory if unset)
+# =============================================
+# Use one of the following (prefer a managed Redis in production):
+# REDIS_URL=redis://localhost:6379
+# REDIS_URL=rediss://example.redis.provider:6380
+# UPSTASH_REDIS_URL=rediss://<host>:<port>
 
 # =============================================
 # Marketplace Feature Flag
 # =============================================
 # Toggle Marketplace module (true = enabled, false = disabled)
 NEXT_PUBLIC_MARKETPLACE_ENABLED=true
+
+# =============================================
+# Sentry (error monitoring)
+# =============================================
+# Server-side DSN (recommended)
+# SENTRY_DSN=https://publicKey@o000000.ingest.sentry.io/000000
+# Optional client-side DSN
+# NEXT_PUBLIC_SENTRY_DSN=
+# Performance & session replay tuning
+# SENTRY_TRACES_SAMPLE_RATE=0.1
+# SENTRY_REPLAYS_SESSION_SAMPLE_RATE=0
+# SENTRY_REPLAYS_ON_ERROR_SAMPLE_RATE=1.0
+
+# =============================================
+# Realtime / Socket.io (optional)
+# =============================================
+# NEXT_PUBLIC_SOCKET_URL=https://api.carelinkai.com
+
+# =============================================
+# Test/E2E conveniences (never enable in production)
+# =============================================
+# NEXT_PUBLIC_E2E_AUTH_BYPASS=0
