--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,30 @@ services:
       - '${POSTGRES_PORT:-5434}:5432'
     volumes:
       - db_data:/var/lib/postgresql/data
+  minio:
+    image: minio/minio:latest
+    container_name: carelinkai-minio
+    command: server /data --console-address ":9001"
+    environment:
+      MINIO_ROOT_USER: minio
+      MINIO_ROOT_PASSWORD: minio123
+    ports:
+      - "9002:9000"   # S3 API
+      - "9003:9001"   # Console UI
+    volumes:
+      - minio_data:/data
+
+  minio-create-bucket:
+    image: minio/mc:latest
+    container_name: carelinkai-minio-setup
+    depends_on:
+      - minio
+    entrypoint: >-
+      sh -c "
+        until (/usr/bin/mc alias set local http://minio:9000 minio minio123) do echo '...waiting for minio...' && sleep 2; done && \
+        /usr/bin/mc mb -p local/carelinkai-storage || true && \
+        /usr/bin/mc ls local
+      "
 
   web:
     build:
@@ -22,10 +46,21 @@ services:
       NEXTAUTH_URL: http://localhost:5000
       NEXTAUTH_SECRET: change-me-in-.env
       DATABASE_URL: postgresql://postgres:postgres@db:5432/carelinkai_marketplace?schema=public
+      # S3/MinIO for local dev
+      S3_BUCKET: carelinkai-storage
+      S3_REGION: us-east-1
+      S3_ENDPOINT: http://minio:9000
+      S3_FORCE_PATH_STYLE: "true"
+      S3_ACCESS_KEY_ID: minio
+      S3_SECRET_ACCESS_KEY: minio123
+      S3_ENABLE_SSE: "false"
     ports:
       - '5000:3000'
     depends_on:
       - db
+      - minio
+      - minio-create-bucket
 
 volumes:
   db_data:
+  minio_data:
