--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.9'
 services:
   db:
     image: postgres:15-alpine
@@ -11,6 +10,11 @@ services:
       - '${POSTGRES_PORT:-5434}:5432'
     volumes:
       - db_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d carelinkai_marketplace"]
+      interval: 5s
+      timeout: 3s
+      retries: 15
   minio:
     image: minio/minio:latest
     container_name: carelinkai-minio
@@ -23,6 +27,11 @@ services:
       - "9003:9001"   # Console UI
     volumes:
       - minio_data:/data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/ready"]
+      interval: 5s
+      timeout: 3s
+      retries: 20
 
   minio-create-bucket:
     image: minio/mc:latest
@@ -57,9 +66,12 @@ services:
     ports:
       - '5000:3000'
     depends_on:
-      - db
-      - minio
-      - minio-create-bucket
+      db:
+        condition: service_healthy
+      minio:
+        condition: service_healthy
+      minio-create-bucket:
+        condition: service_started
 
 volumes:
   db_data:
