feat(operator): analytics charts + range filter + CSV export; homes quick actions; billing metrics; unified table styles; compliance tables

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "aws-sdk": "^2.1692.0",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
-    "chart.js": "^4.4.0",
+    "chart.js": "4.4.4",
     "critters": "^0.0.23",
     "cssnano": "^7.1.0",
     "date-fns": "^2.30.0",
@@ -70,7 +70,7 @@
     "postcss-preset-env": "^10.2.4",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
+    "react-chartjs-2": "5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.5.2",
