feat(ai): resident matching engine with semantic embeddings and /api/ai/match/resident endpoint; tests included (Droid-assisted)

--- a/.env.example
+++ b/.env.example
@@ -108,3 +108,9 @@ NEXT_PUBLIC_MARKETPLACE_ENABLED=true
 # Test/E2E conveniences (never enable in production)
 # =============================================
 # NEXT_PUBLIC_E2E_AUTH_BYPASS=0
+
+# =============================================
+# AI/Embeddings (optional)
+# =============================================
+# OPENAI_API_KEY=sk-...
+# OPENAI_EMBEDDING_MODEL=text-embedding-3-small
