chore(ci+docker): add CI workflow and Dockerfile; release workflow publishes image to GHCR on tags (Droid-assisted)

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,24 +1,10 @@
 node_modules
-.next/cache
-.next/trace
-.next/static/cache
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
+.next
 .git
 .github
-e2e
-test-results
-coverage
-*.local
-.env.local
-.env.*.local
+npm-debug.log*
+.env*
 Dockerfile*
-docker-compose.*.yml
-.vscode
-.idea
-dist
-build
-tmp
-*.swp
+README.md
+**/*.test.*
+coverage
