--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,98 +2,33 @@ name: CI
 
 on:
   push:
-    branches: [ main, chore/**, fix/**, feat/** ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Use Node.js 18
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 18
           cache: 'npm'
 
-      - name: Install dependencies (frozen)
+      - name: Install dependencies
         run: npm ci
 
       - name: Lint
-        run: npm run lint --if-present
+        run: npm run lint
 
-      - name: Typecheck
-        run: |
-          if [ -f tsconfig.json ]; then
-            npx tsc -noEmit
-          fi
+      - name: Test
+        run: npm test -s
 
       - name: Build
-        env:
-          STRIPE_SECRET_KEY: sk_test_dummy
-          SENDGRID_API_KEY: dummy
         run: npm run build
-
-      - name: Unit tests
-        run: npm test -- --ci --reporters=default --reporters=jest-junit || true
-
-  e2e:
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
-    services:
-      postgres:
-        image: postgres:15-alpine
-        env:
-          POSTGRES_DB: carelinkai_marketplace
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-        ports:
-          - 5434:5432
-        options: >-
-          --health-cmd "pg_isready -U postgres -d carelinkai_marketplace"
-          --health-interval 5s
-          --health-timeout 3s
-          --health-retries 15
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: Install dependencies (frozen)
-        run: npm ci
-
-      - name: Generate Prisma Client
-        env:
-          DATABASE_URL: postgresql://postgres:postgres@localhost:5434/carelinkai_marketplace?schema=public
-        run: npx prisma generate
-
-      - name: Run migrations
-        env:
-          DATABASE_URL: postgresql://postgres:postgres@localhost:5434/carelinkai_marketplace?schema=public
-        run: npx prisma migrate deploy
-
-      - name: Seed demo data (marketplace)
-        env:
-          DATABASE_URL: postgresql://postgres:postgres@localhost:5434/carelinkai_marketplace?schema=public
-        run: npm run seed:marketplace-demo
-
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps chromium
-
-      - name: Run E2E tests
-        env:
-          PLAYWRIGHT_BASE_URL: http://localhost:3000
-          PLAYWRIGHT_WEB_SERVER_CMD: NEXT_PUBLIC_E2E_AUTH_BYPASS=1 npm run dev
-          NEXT_PUBLIC_E2E_AUTH_BYPASS: '1'
-          DATABASE_URL: postgresql://postgres:postgres@localhost:5434/carelinkai_marketplace?schema=public
-          NEXTAUTH_URL: http://localhost:3000
-          NEXTAUTH_SECRET: devsecret
-        run: npx playwright test --reporter=line
