--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "postinstall": "prisma generate",
     "start:e2e": "npm run build && cross-env NEXTAUTH_URL=http://localhost:3000 NEXTAUTH_SECRET=devsecret DATABASE_URL=postgresql://postgres:postgres@localhost:5434/carelinkai_marketplace?schema=public ALLOW_DEV_ENDPOINTS=1 next start",
     "lint": "next lint",
     "test": "jest",
@@ -37,7 +38,7 @@
     "@fullcalendar/timegrid": "^6.1.18",
     "@headlessui/react": "^2.2.6",
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^5.9.0",
+    "@prisma/client": "5.22.0",
     "@sendgrid/mail": "^8.1.5",
     "@sentry/nextjs": "7.120.4",
     "@stripe/react-stripe-js": "^2.4.0",
@@ -110,7 +111,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "prisma": "^5.9.0",
+    "prisma": "5.22.0",
     "tailwindcss": "^3.3.5",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.1",
