--- a/package.json
+++ b/package.json
@@ -1,127 +1,132 @@
 {
-    "name":  "carelinkai",
-    "version":  "0.1.0",
-    "private":  true,
-    "scripts":  {
-                    "dev":  "next dev",
-                    "build":  "next build",
-                    "start":  "next start",
-                    "lint":  "next lint",
-                    "test":  "jest",
-                    "prisma:generate":  "prisma generate",
-                    "prisma:migrate":  "prisma migrate dev",
-                    "prisma:studio":  "prisma studio",
-                    "seed":  "ts-node --transpile-only prisma/seed.ts",
-                    "seed:marketplace-demo":  "ts-node --transpile-only prisma/seed-marketplace-demo.ts",
-                    "generate:vapid":  "node scripts/generate-vapid.js --update-env",
-                    "generate:icons":  "node scripts/generate-pwa-icons.js",
-                    "test:pwa":  "node scripts/test-pwa.js",
-                    "build:pwa":  "npm run build \u0026\u0026 npm run test:pwa",
-                    "test:e2e":  "playwright test --reporter=list",
-                    "cron:schedule":  "node scripts/run-cron.js --mode schedule",
-                    "cron:run":  "node scripts/run-cron.js",
-                    "type-check":  "tsc -p tsconfig.json --noEmit",
-                    "migrate:deploy":  "prisma migrate deploy"
-                },
-    "prisma":  {
-                   "seed":  "ts-node --transpile-only prisma/seed.ts"
-               },
-    "dependencies":  {
-                         "@aws-sdk/client-s3":  "^3.859.0",
-                         "@aws-sdk/s3-request-presigner":  "^3.859.0",
-                         "@fullcalendar/core":  "^6.1.18",
-                         "@fullcalendar/daygrid":  "^6.1.18",
-                         "@fullcalendar/interaction":  "^6.1.18",
-                         "@fullcalendar/list":  "^6.1.18",
-                         "@fullcalendar/react":  "^6.1.18",
-                         "@fullcalendar/timegrid":  "^6.1.18",
-                         "@headlessui/react":  "^2.2.6",
-                         "@next-auth/prisma-adapter":  "^1.0.5",
-                         "@prisma/client":  "^5.9.0",
-                         "@sendgrid/mail":  "^8.1.5",
-                         "@stripe/react-stripe-js":  "^2.4.0",
-                         "@stripe/stripe-js":  "^2.2.0",
-                         "@tailwindcss/aspect-ratio":  "^0.4.2",
-                         "@tailwindcss/forms":  "^0.5.10",
-                         "@tailwindcss/typography":  "^0.5.16",
-                         "@types/nodemailer":  "^6.4.17",
-                         "archiver":  "^7.0.1",
-                         "aws-sdk":  "^2.1692.0",
-                         "axios":  "^1.6.2",
-                         "bcryptjs":  "^2.4.3",
-                         "chart.js":  "^4.4.0",
-                         "critters":  "^0.0.23",
-                         "cssnano":  "^7.1.0",
-                         "date-fns":  "^2.30.0",
-                         "express":  "^4.18.2",
-                         "form-data":  "^4.0.0",
-                         "framer-motion":  "^12.23.9",
-                         "ioredis":  "^5.7.0",
-                         "leaflet":  "^1.9.4",
-                         "next":  "14.0.4",
-                         "next-auth":  "^4.24.5",
-                         "next-pwa":  "^5.6.0",
-                         "next-themes":  "^0.4.6",
-                         "node-fetch":  "^3.3.2",
-                         "nodemailer":  "^6.10.1",
-                         "otplib":  "^12.0.1",
-                         "postcss-flexbugs-fixes":  "^5.0.2",
-                         "postcss-preset-env":  "^10.2.4",
-                         "qrcode":  "^1.5.3",
-                         "react":  "^18.2.0",
-                         "react-chartjs-2":  "^5.2.0",
-                         "react-dom":  "^18.2.0",
-                         "react-hook-form":  "^7.48.2",
-                         "react-hot-toast":  "^2.5.2",
-                         "react-icons":  "^4.12.0",
-                         "react-leaflet":  "^4.2.1",
-                         "sharp":  "^0.33.0",
-                         "socket.io":  "^4.7.2",
-                         "socket.io-client":  "^4.7.2",
-                         "stripe":  "^14.5.0",
-                         "twilio":  "^5.8.2",
-                         "uuid":  "^9.0.1",
-                         "web-push":  "^3.6.7",
-                         "zod":  "^3.25.76"
-                     },
-    "devDependencies":  {
-                            "@playwright/test":  "^1.55.0",
-                            "@testing-library/jest-dom":  "^6.1.4",
-                            "@testing-library/react":  "^14.1.2",
-                            "@types/bcryptjs":  "^2.4.2",
-                            "@types/jest":  "^29.5.10",
-                            "@types/leaflet":  "^1.9.20",
-                            "@types/node":  "^20.10.0",
-                            "@types/qrcode":  "^1.5.5",
-                            "@types/react":  "^18.2.38",
-                            "@types/react-dom":  "^18.2.17",
-                            "@types/uuid":  "^9.0.8",
-                            "@typescript-eslint/eslint-plugin":  "^6.13.2",
-                            "@typescript-eslint/parser":  "^6.13.2",
-                            "autoprefixer":  "^10.4.16",
-                            "concurrently":  "^8.2.2",
-                            "cross-env":  "^7.0.3",
-                            "eslint":  "^8.54.0",
-                            "eslint-config-next":  "14.0.4",
-                            "jest":  "^29.7.0",
-                            "jest-environment-jsdom":  "^29.7.0",
-                            "postcss":  "^8.4.31",
-                            "prettier":  "^3.1.0",
-                            "prettier-plugin-tailwindcss":  "^0.5.7",
-                            "prisma":  "^5.9.0",
-                            "tailwindcss":  "^3.3.5",
-                            "ts-jest":  "^29.4.1",
-                            "ts-node":  "^10.9.1",
-                            "typescript":  "^5.3.2"
-                        },
-    "engines":  {
-                    "node":  "\u003e=18.0.0"
-                },
-    "jest":  {
-                 "preset":  "ts-jest",
-                 "testEnvironment":  "node",
-                 "moduleNameMapper":  {
-                                          "^@/(.*)$":  "\u003crootDir\u003e/src/$1"
-                                      }
-             }
+    "name": "carelinkai",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "test": "jest",
+        "prisma:generate": "prisma generate",
+        "prisma:migrate": "prisma migrate dev",
+        "prisma:studio": "prisma studio",
+        "seed": "ts-node --transpile-only prisma/seed.ts",
+        "seed:marketplace-demo": "ts-node --transpile-only prisma/seed-marketplace-demo.ts",
+        "generate:vapid": "node scripts/generate-vapid.js --update-env",
+        "generate:icons": "node scripts/generate-pwa-icons.js",
+        "test:pwa": "node scripts/test-pwa.js",
+        "build:pwa": "npm run build && npm run test:pwa",
+        "test:e2e": "playwright test --reporter=list",
+        "cron:schedule": "node scripts/run-cron.js --mode schedule",
+        "cron:run": "node scripts/run-cron.js",
+        "type-check": "tsc -p tsconfig.json --noEmit",
+        "migrate:deploy": "prisma migrate deploy"
+    },
+    "prisma": {
+        "seed": "ts-node --transpile-only prisma/seed.ts"
+    },
+    "dependencies": {
+        "@aws-sdk/client-s3": "^3.859.0",
+        "@aws-sdk/s3-request-presigner": "^3.859.0",
+        "@fullcalendar/core": "^6.1.18",
+        "@fullcalendar/daygrid": "^6.1.18",
+        "@fullcalendar/interaction": "^6.1.18",
+        "@fullcalendar/list": "^6.1.18",
+        "@fullcalendar/react": "^6.1.18",
+        "@fullcalendar/timegrid": "^6.1.18",
+        "@headlessui/react": "^2.2.6",
+        "@next-auth/prisma-adapter": "^1.0.5",
+        "@opentelemetry/api": "1.9.0",
+        "@opentelemetry/exporter-trace-otlp-http": "0.207.0",
+        "@opentelemetry/sdk-node": "0.207.0",
+        "@prisma/client": "^5.9.0",
+        "@sendgrid/mail": "^8.1.5",
+        "@sentry/nextjs": "10.21.0",
+        "@stripe/react-stripe-js": "^2.4.0",
+        "@stripe/stripe-js": "^2.2.0",
+        "@tailwindcss/aspect-ratio": "^0.4.2",
+        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/typography": "^0.5.16",
+        "@types/nodemailer": "^6.4.17",
+        "archiver": "^7.0.1",
+        "aws-sdk": "^2.1692.0",
+        "axios": "^1.6.2",
+        "bcryptjs": "^2.4.3",
+        "chart.js": "^4.4.0",
+        "critters": "^0.0.23",
+        "cssnano": "^7.1.0",
+        "date-fns": "^2.30.0",
+        "express": "^4.18.2",
+        "form-data": "^4.0.0",
+        "framer-motion": "^12.23.9",
+        "ioredis": "^5.7.0",
+        "leaflet": "^1.9.4",
+        "next": "14.0.4",
+        "next-auth": "^4.24.5",
+        "next-pwa": "^5.6.0",
+        "next-themes": "^0.4.6",
+        "node-fetch": "^3.3.2",
+        "nodemailer": "^6.10.1",
+        "otplib": "^12.0.1",
+        "pino": "10.1.0",
+        "postcss-flexbugs-fixes": "^5.0.2",
+        "postcss-preset-env": "^10.2.4",
+        "qrcode": "^1.5.3",
+        "react": "^18.2.0",
+        "react-chartjs-2": "^5.2.0",
+        "react-dom": "^18.2.0",
+        "react-hook-form": "^7.48.2",
+        "react-hot-toast": "^2.5.2",
+        "react-icons": "^4.12.0",
+        "react-leaflet": "^4.2.1",
+        "sharp": "^0.33.0",
+        "socket.io": "^4.7.2",
+        "socket.io-client": "^4.7.2",
+        "stripe": "^14.5.0",
+        "twilio": "^5.8.2",
+        "uuid": "^9.0.1",
+        "web-push": "^3.6.7",
+        "zod": "^3.25.76"
+    },
+    "devDependencies": {
+        "@playwright/test": "^1.55.0",
+        "@testing-library/jest-dom": "^6.1.4",
+        "@testing-library/react": "^14.1.2",
+        "@types/bcryptjs": "^2.4.2",
+        "@types/jest": "^29.5.10",
+        "@types/leaflet": "^1.9.20",
+        "@types/node": "^20.10.0",
+        "@types/qrcode": "^1.5.5",
+        "@types/react": "^18.2.38",
+        "@types/react-dom": "^18.2.17",
+        "@types/uuid": "^9.0.8",
+        "@typescript-eslint/eslint-plugin": "^6.13.2",
+        "@typescript-eslint/parser": "^6.13.2",
+        "autoprefixer": "^10.4.16",
+        "concurrently": "^8.2.2",
+        "cross-env": "^7.0.3",
+        "eslint": "^8.54.0",
+        "eslint-config-next": "14.0.4",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "postcss": "^8.4.31",
+        "prettier": "^3.1.0",
+        "prettier-plugin-tailwindcss": "^0.5.7",
+        "prisma": "^5.9.0",
+        "tailwindcss": "^3.3.5",
+        "ts-jest": "^29.4.1",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.3.2"
+    },
+    "engines": {
+        "node": ">=18.0.0"
+    },
+    "jest": {
+        "preset": "ts-jest",
+        "testEnvironment": "node",
+        "moduleNameMapper": {
+            "^@/(.*)$": "<rootDir>/src/$1"
+        }
+    }
 }
