docs(env): add Sentry and AWS S3 environment variables to .env.example [Droid-assisted]

--- a/.env.example
+++ b/.env.example
@@ -70,3 +70,18 @@ STRIPE_WEBHOOK_SECRET=whsec_your-stripe-webhook-secret
 # =============================================
 # Toggle Marketplace module (true = enabled, false = disabled)
 NEXT_PUBLIC_MARKETPLACE_ENABLED=true
+# =============================================
+# Observability (Sentry)
+# =============================================
+SENTRY_DSN=
+SENTRY_TRACES_SAMPLE_RATE=0.1
+NEXT_PUBLIC_SENTRY_DSN=
+NEXT_PUBLIC_SENTRY_TRACES_SAMPLE_RATE=0.1
+
+# =============================================
+# AWS S3 (Production)
+# =============================================
+AWS_REGION=us-west-2
+AWS_S3_BUCKET=carelinkai-credentials
+AWS_S3_ENDPOINT=
+AWS_S3_FORCE_PATH_STYLE=false
