docs(env): document REDIS_URL for Redis-backed rate limiting [Droid-assisted]

--- a/.env.example
+++ b/.env.example
@@ -85,3 +85,10 @@ AWS_REGION=us-west-2
 AWS_S3_BUCKET=carelinkai-credentials
 AWS_S3_ENDPOINT=
 AWS_S3_FORCE_PATH_STYLE=false
+
+# =============================================
+# Redis (Rate Limiting / Caching)
+# =============================================
+# For Render/Upstash/etc. Use rediss:// for TLS when required
+REDIS_URL=
+
