docs(env): add OpenTelemetry env vars for OTLP endpoint/headers/service name [Droid-assisted]

--- a/.env.example
+++ b/.env.example
@@ -92,3 +92,14 @@ AWS_S3_FORCE_PATH_STYLE=false
 # For Render/Upstash/etc. Use rediss:// for TLS when required
 REDIS_URL=
 
+
+# =============================================
+# OpenTelemetry (Tracing)
+# =============================================
+# Example: https://api.honeycomb.io or your OTLP collector endpoint
+OTEL_EXPORTER_OTLP_ENDPOINT=
+# Optional headers, e.g. x-honeycomb-team=YOUR_API_KEY
+OTEL_EXPORTER_OTLP_HEADERS=
+# Service name reported in traces
+OTEL_SERVICE_NAME=carelinkai
+
