--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
         "@next-auth/prisma-adapter": "^1.0.5",
         "@opentelemetry/api": "1.9.0",
         "@opentelemetry/exporter-trace-otlp-http": "0.207.0",
+        "@opentelemetry/instrumentation-http": "^0.207.0",
+        "@opentelemetry/instrumentation-undici": "^0.18.0",
         "@opentelemetry/sdk-node": "0.207.0",
         "@prisma/client": "^5.9.0",
+        "@prisma/instrumentation": "^6.18.0",
         "@sendgrid/mail": "^8.1.5",
         "@sentry/nextjs": "10.21.0",
         "@stripe/react-stripe-js": "^2.4.0",
