--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
         "react-hot-toast": "^2.5.2",
         "react-icons": "^4.12.0",
         "react-leaflet": "^4.2.1",
+        "react-virtuoso": "4.14.1",
         "sharp": "^0.33.0",
         "socket.io": "^4.7.2",
         "socket.io-client": "^4.7.2",
