--- a/.env.example
+++ b/.env.example
@@ -90,3 +90,19 @@ OTEL_EXPORTER_OTLP_HEADERS=
 # Service name reported in traces
 OTEL_SERVICE_NAME=carelinkai
 
+# =============================================
+# Email SMTP (Production)
+# =============================================
+EMAIL_FROM=noreply@carelinkai.com
+EMAIL_FROM_NAME=CareLinkAI
+EMAIL_SERVER_HOST=
+EMAIL_SERVER_PORT=587
+EMAIL_SERVER_SECURE=false
+EMAIL_SERVER_USER=
+EMAIL_SERVER_PASSWORD=
+# Alternative SMTP naming (used by EmailService)
+# SMTP_HOST=
+# SMTP_PORT=587
+# SMTP_SECURE=false
+# SMTP_USER=
+# SMTP_PASSWORD=
