chore(ci): prefer Render Deploy Hook with API fallback; fix failing deploy workflow [Droid-assisted]

--- a/.github/workflows/deploy-render.yml
+++ b/.github/workflows/deploy-render.yml
@@ -8,17 +8,33 @@ on:
 
 jobs:
   deploy:
-    if: ${{ secrets.RENDER_API_KEY && secrets.RENDER_SERVICE_ID }}
+    # Run if either a Deploy Hook is set or both API key and Service ID are set
+    if: ${{ secrets.RENDER_DEPLOY_HOOK_URL || (secrets.RENDER_API_KEY && secrets.RENDER_SERVICE_ID) }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Trigger Render deploy
+      - name: Trigger Render deploy via Deploy Hook (preferred)
+        if: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+        env:
+          RENDER_DEPLOY_HOOK_URL: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+        run: |
+          set -e
+          echo "Triggering Render via Deploy Hook"
+          curl -fsSL -X POST "$RENDER_DEPLOY_HOOK_URL"
+          echo "Deploy hook triggered."
+      - name: Trigger Render deploy via API (fallback)
+        if: ${{ !secrets.RENDER_DEPLOY_HOOK_URL && secrets.RENDER_API_KEY && secrets.RENDER_SERVICE_ID }}
         env:
           RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
           RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
         run: |
-          curl -fsSL -X POST \
+          set -e
+          echo "Triggering Render via API for service ${RENDER_SERVICE_ID}"
+          curl -fsSL \
+            -X POST "https://api.render.com/v1/services/${RENDER_SERVICE_ID}/deploys" \
             -H "Authorization: Bearer ${RENDER_API_KEY}" \
+            -H "Accept: application/json" \
             -H "Content-Type: application/json" \
-            https://api.render.com/v1/services/${RENDER_SERVICE_ID}/deploys
+            -d '{"clearCache": false}'
+          echo "API deploy triggered."
