--- a/.github/workflows/deploy-render.yml
+++ b/.github/workflows/deploy-render.yml
@@ -8,23 +8,42 @@ on:
 
 jobs:
   deploy:
-    # Run if either a Deploy Hook is set or both API key and Service ID are set
-    if: ${{ secrets.RENDER_DEPLOY_HOOK_URL || (secrets.RENDER_API_KEY && secrets.RENDER_SERVICE_ID) }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Trigger Render deploy via Deploy Hook (preferred)
+
+      - name: Detect available secrets (presence only)
+        run: |
+          echo "RENDER_DEPLOY_HOOK_URL set: ${{ secrets.RENDER_DEPLOY_HOOK_URL != '' }}"
+          echo "RENDER_STAGING_DEPLOY_HOOK_URL set: ${{ secrets.RENDER_STAGING_DEPLOY_HOOK_URL != '' }}"
+          echo "RENDER_API_KEY set: ${{ secrets.RENDER_API_KEY != '' }}"
+          echo "RENDER_SERVICE_ID set: ${{ secrets.RENDER_SERVICE_ID != '' }}"
+          echo "RENDER_STAGING_API_KEY set: ${{ secrets.RENDER_STAGING_API_KEY != '' }}"
+          echo "RENDER_STAGING_SERVICE_ID set: ${{ secrets.RENDER_STAGING_SERVICE_ID != '' }}"
+
+      - name: Trigger Render via Deploy Hook (RENDER_DEPLOY_HOOK_URL)
         if: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
         env:
           RENDER_DEPLOY_HOOK_URL: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
         run: |
           set -e
-          echo "Triggering Render via Deploy Hook"
+          echo "Triggering Render via Deploy Hook (generic)"
           curl -fsSL -X POST "$RENDER_DEPLOY_HOOK_URL"
-          echo "Deploy hook triggered."
-      - name: Trigger Render deploy via API (fallback)
-        if: ${{ !secrets.RENDER_DEPLOY_HOOK_URL && secrets.RENDER_API_KEY && secrets.RENDER_SERVICE_ID }}
+          echo "Deploy hook triggered (generic)."
+
+      - name: Trigger Render via Deploy Hook (RENDER_STAGING_DEPLOY_HOOK_URL)
+        if: ${{ !secrets.RENDER_DEPLOY_HOOK_URL && secrets.RENDER_STAGING_DEPLOY_HOOK_URL }}
+        env:
+          RENDER_STAGING_DEPLOY_HOOK_URL: ${{ secrets.RENDER_STAGING_DEPLOY_HOOK_URL }}
+        run: |
+          set -e
+          echo "Triggering Render via Deploy Hook (staging)"
+          curl -fsSL -X POST "$RENDER_STAGING_DEPLOY_HOOK_URL"
+          echo "Deploy hook triggered (staging)."
+
+      - name: Trigger Render via API (RENDER_API_KEY + RENDER_SERVICE_ID)
+        if: ${{ (!secrets.RENDER_DEPLOY_HOOK_URL && !secrets.RENDER_STAGING_DEPLOY_HOOK_URL) && (secrets.RENDER_API_KEY && secrets.RENDER_SERVICE_ID) }}
         env:
           RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
           RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
@@ -37,4 +56,20 @@ jobs:
             -H "Accept: application/json" \
             -H "Content-Type: application/json" \
             -d '{"clearCache": false}'
-          echo "API deploy triggered."
+          echo "API deploy triggered (generic)."
+
+      - name: Trigger Render via API (RENDER_STAGING_API_KEY + RENDER_STAGING_SERVICE_ID)
+        if: ${{ (!secrets.RENDER_DEPLOY_HOOK_URL && !secrets.RENDER_STAGING_DEPLOY_HOOK_URL) && (!secrets.RENDER_API_KEY || !secrets.RENDER_SERVICE_ID) && (secrets.RENDER_STAGING_API_KEY && secrets.RENDER_STAGING_SERVICE_ID) }}
+        env:
+          RENDER_API_KEY: ${{ secrets.RENDER_STAGING_API_KEY }}
+          RENDER_SERVICE_ID: ${{ secrets.RENDER_STAGING_SERVICE_ID }}
+        run: |
+          set -e
+          echo "Triggering Render via API for STAGING service ${RENDER_SERVICE_ID}"
+          curl -fsSL \
+            -X POST "https://api.render.com/v1/services/${RENDER_SERVICE_ID}/deploys" \
+            -H "Authorization: Bearer ${RENDER_API_KEY}" \
+            -H "Accept: application/json" \
+            -H "Content-Type: application/json" \
+            -d '{"clearCache": false}'
+          echo "API deploy triggered (staging)."
