feat(ui): operator Residents list and detail pages behind NEXT_PUBLIC_RESIDENTS_ENABLED [Droid-assisted]

--- a/.env.example
+++ b/.env.example
@@ -106,3 +106,6 @@ EMAIL_SERVER_PASSWORD=
 # SMTP_SECURE=false
 # SMTP_USER=
 # SMTP_PASSWORD=
+# Residents Module
+NEXT_PUBLIC_RESIDENTS_ENABLED=true
+
