--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
-        "start": "next start",
+        "start": "npm run migrate:deploy && next start",
         "lint": "next lint",
         "test": "jest",
         "prisma:generate": "prisma generate",
@@ -134,3 +134,4 @@
         }
     }
 }
+
