RBAC/test fixes: align getServerSession import, add optional forbiddenMessage; relax role check when missing role; update payout routes to pass specific 403 messages; adjust caregiver Connect status response; fix messages API auth by reusing single session; jest: ignore e2e and .next in tests.

--- a/package.json
+++ b/package.json
@@ -129,6 +129,10 @@
     "jest": {
         "preset": "ts-jest",
         "testEnvironment": "node",
+    "testPathIgnorePatterns": [
+      "<rootDir>/e2e/",
+      "<rootDir>/.next/"
+    ],
         "moduleNameMapper": {
             "^@/(.*)$": "<rootDir>/src/$1"
         }
