--- a/.github/workflows/deploy-render.yml
+++ b/.github/workflows/deploy-render.yml
@@ -1,65 +1,90 @@
-name: Deploy to Render Legacy
+name: Deploy to Render (env-aware)
 
 on:
   workflow_dispatch:
+  push:
+    branches: [ main ]
 
 jobs:
   deploy:
+    name: Deploy (${{ matrix.envName }})
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        envName: ["main - carelinkai", "main - carelinkai-db"]
+    environment:
+      name: ${{ matrix.envName }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Intentionally no secret introspection here to avoid expression parsing issues
-
-      - name: Trigger Render via Deploy Hook (RENDER_DEPLOY_HOOK_URL)
-        if: ${{ secrets.RENDER_DEPLOY_HOOK_URL != '' }}
+      - name: Trigger Render deployment if secrets present
         env:
-          RENDER_DEPLOY_HOOK_URL: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+          HOOK_A: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+          HOOK_B: ${{ secrets.RENDER_HOOK_URL }}
+          HOOK_C: ${{ secrets.RENDER_SERVICE_HOOK }}
+          HOOK_D: ${{ secrets.RENDER_BLUEPRINT_HOOK }}
+          API_KEY_A: ${{ secrets.RENDER_API_KEY }}
+          API_KEY_B: ${{ secrets.RENDER_TOKEN }}
+          SERVICE_ID_A: ${{ secrets.RENDER_SERVICE_ID }}
+          SERVICE_ID_B: ${{ secrets.RENDER_WEB_SERVICE_ID }}
+          STAGING_HOOK_A: ${{ secrets.RENDER_STAGING_DEPLOY_HOOK_URL }}
+          STAGING_API_KEY_A: ${{ secrets.RENDER_STAGING_API_KEY }}
+          STAGING_SERVICE_ID_A: ${{ secrets.RENDER_STAGING_SERVICE_ID }}
         run: |
-          set -e
-          echo "Triggering Render via Deploy Hook (generic)"
-          curl -fsSL -X POST "$RENDER_DEPLOY_HOOK_URL"
-          echo "Deploy hook triggered (generic)."
+          set -euo pipefail
+          echo "Environment: ${{ matrix.envName }}"
+          pick_first_nonempty() {
+            for var in "$@"; do
+              eval val="\${$var:-}"
+              if [ -n "${val:-}" ]; then
+                echo "$val"
+                return 0
+              fi
+            done
+            return 1
+          }
 
-      - name: Trigger Render via Deploy Hook (RENDER_STAGING_DEPLOY_HOOK_URL)
-        if: ${{ (secrets.RENDER_DEPLOY_HOOK_URL == '') && (secrets.RENDER_STAGING_DEPLOY_HOOK_URL != '') }}
-        env:
-          RENDER_STAGING_DEPLOY_HOOK_URL: ${{ secrets.RENDER_STAGING_DEPLOY_HOOK_URL }}
-        run: |
-          set -e
-          echo "Triggering Render via Deploy Hook (staging)"
-          curl -fsSL -X POST "$RENDER_STAGING_DEPLOY_HOOK_URL"
-          echo "Deploy hook triggered (staging)."
+          HOOK_URL=$(pick_first_nonempty HOOK_A HOOK_B HOOK_C HOOK_D || true)
+          if [ -n "${HOOK_URL:-}" ]; then
+            echo "Using deploy hook URL"
+            curl -fsSL -X POST "$HOOK_URL"
+            echo "Render deploy hook triggered."
+            exit 0
+          fi
 
-      - name: Trigger Render via API (RENDER_API_KEY + RENDER_SERVICE_ID)
-        if: ${{ (secrets.RENDER_DEPLOY_HOOK_URL == '' && secrets.RENDER_STAGING_DEPLOY_HOOK_URL == '') && (secrets.RENDER_API_KEY != '' && secrets.RENDER_SERVICE_ID != '') }}
-        env:
-          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
-          RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
-        run: |
-          set -e
-          echo "Triggering Render via API for service ${RENDER_SERVICE_ID}"
-          curl -fsSL \
-            -X POST "https://api.render.com/v1/services/${RENDER_SERVICE_ID}/deploys" \
-            -H "Authorization: Bearer ${RENDER_API_KEY}" \
-            -H "Accept: application/json" \
-            -H "Content-Type: application/json" \
-            -d '{"clearCache": false}'
-          echo "API deploy triggered (generic)."
+          API_KEY=$(pick_first_nonempty API_KEY_A API_KEY_B || true)
+          SERVICE_ID=$(pick_first_nonempty SERVICE_ID_A SERVICE_ID_B || true)
+          if [ -n "${API_KEY:-}" ] && [ -n "${SERVICE_ID:-}" ]; then
+            echo "Triggering Render API using service ID"
+            curl -fsSL \
+              -X POST "https://api.render.com/v1/services/${SERVICE_ID}/deploys" \
+              -H "Authorization: Bearer ${API_KEY}" \
+              -H "Accept: application/json" \
+              -H "Content-Type: application/json" \
+              -d '{"clearCache": false}'
+            echo "Render API deploy triggered."
+            exit 0
+          fi
 
-      - name: Trigger Render via API (RENDER_STAGING_API_KEY + RENDER_STAGING_SERVICE_ID)
-        if: ${{ (secrets.RENDER_DEPLOY_HOOK_URL == '' && secrets.RENDER_STAGING_DEPLOY_HOOK_URL == '') && ((secrets.RENDER_API_KEY == '' || secrets.RENDER_SERVICE_ID == '')) && (secrets.RENDER_STAGING_API_KEY != '' && secrets.RENDER_STAGING_SERVICE_ID != '') }}
-        env:
-          RENDER_API_KEY: ${{ secrets.RENDER_STAGING_API_KEY }}
-          RENDER_SERVICE_ID: ${{ secrets.RENDER_STAGING_SERVICE_ID }}
-        run: |
-          set -e
-          echo "Triggering Render via API for STAGING service ${RENDER_SERVICE_ID}"
-          curl -fsSL \
-            -X POST "https://api.render.com/v1/services/${RENDER_SERVICE_ID}/deploys" \
-            -H "Authorization: Bearer ${RENDER_API_KEY}" \
-            -H "Accept: application/json" \
-            -H "Content-Type: application/json" \
-            -d '{"clearCache": false}'
-          echo "API deploy triggered (staging)."
+          if [ -n "${STAGING_HOOK_A:-}" ]; then
+            echo "Using staging deploy hook URL"
+            curl -fsSL -X POST "$STAGING_HOOK_A"
+            echo "Render staging deploy hook triggered."
+            exit 0
+          fi
+
+          if [ -n "${STAGING_API_KEY_A:-}" ] && [ -n "${STAGING_SERVICE_ID_A:-}" ]; then
+            echo "Triggering Render staging API using service ID"
+            curl -fsSL \
+              -X POST "https://api.render.com/v1/services/${STAGING_SERVICE_ID_A}/deploys" \
+              -H "Authorization: Bearer ${STAGING_API_KEY_A}" \
+              -H "Accept: application/json" \
+              -H "Content-Type: application/json" \
+              -d '{"clearCache": false}'
+            echo "Render staging API deploy triggered."
+            exit 0
+          fi
+
+          echo "No Render secrets found for environment '${{ matrix.envName }}'; skipping."
