ci(e2e): raise Node heap (NODE_OPTIONS=--max-old-space-size=4096) to prevent Next.js OOM during build [Droid-assisted]

--- a/.github/workflows/e2e-family.yml
+++ b/.github/workflows/e2e-family.yml
@@ -28,6 +28,7 @@ jobs:
     env:
       # App runtime
       NODE_ENV: production
+      NODE_OPTIONS: --max-old-space-size=4096
       NEXTAUTH_URL: http://localhost:3000
       NEXTAUTH_SECRET: testsecret_e2e_123
       ALLOW_DEV_ENDPOINTS: "1"
