ci(e2e): install devDependencies in CI (npm ci --include=dev) to satisfy Next.js type/lint during build [Droid-assisted]

--- a/.github/workflows/e2e-family.yml
+++ b/.github/workflows/e2e-family.yml
@@ -48,8 +48,8 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install dependencies (including dev)
+        run: npm ci --include=dev
 
       - name: Prepare database schema
         run: npx prisma migrate deploy
