--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -12,10 +12,15 @@ concurrency:
 jobs:
   quality:
     runs-on: ubuntu-latest
+    timeout-minutes: 45
     permissions:
       contents: read
       pull-requests: write
       actions: read
+    env:
+      NODE_OPTIONS: --max-old-space-size=4096
+      NEXT_TELEMETRY_DISABLED: '1'
+      S3_DISABLE: '1'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -26,8 +31,11 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install dependencies (including dev)
+        run: npm ci --include=dev
+
+      - name: Generate Prisma Client
+        run: npx prisma generate
 
       - name: Lint
         run: npm run lint
@@ -40,7 +48,6 @@ jobs:
 
       - name: Build
         env:
-          BUILD_TIME: ${{ steps.now.outputs.time }}
           APP_VERSION: ${{ github.sha }}
         run: npm run build
 
