test(jest): add globalTeardown to disconnect Prisma so CI tests exit cleanly (fix Quality cancellations)

--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "jest": {
         "preset": "ts-jest",
         "testEnvironment": "node",
+    "globalTeardown": "<rootDir>/jest.teardown.js",
         "testPathIgnorePatterns": [
             "<rootDir>/e2e/",
             "<rootDir>/.next/"
