--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -44,7 +44,7 @@ jobs:
         run: npm run type-check
 
       - name: Test
-        run: npm test -- --ci --reporters=default --detectOpenHandles --forceExit
+        run: npm test -- --ci --reporters=default --forceExit
 
       - name: Build
         env:
