--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -7,15 +7,20 @@ on:
 
 concurrency:
   group: quality-${{ github.ref }}
-  cancel-in-progress: true
+  cancel-in-progress: false
 
 jobs:
   quality:
     runs-on: ubuntu-latest
+    timeout-minutes: 45
     permissions:
       contents: read
       pull-requests: write
       actions: read
+    env:
+      NODE_OPTIONS: --max-old-space-size=4096
+      NEXT_TELEMETRY_DISABLED: '1'
+      S3_DISABLE: '1'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -26,8 +31,11 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install dependencies (including dev)
+        run: npm ci --include=dev
+
+      - name: Generate Prisma Client
+        run: npx prisma generate
 
       - name: Lint
         run: npm run lint
@@ -36,11 +44,20 @@ jobs:
         run: npm run type-check
 
       - name: Test
-        run: npm test -- --ci --reporters=default
+        shell: bash
+        run: |
+          set -euo pipefail
+          npm test -- --ci --reporters=default --forceExit --runInBand 2>&1 | tee jest.log
+
+      - name: Upload Jest logs on failure
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: jest-log
+          path: jest.log
 
       - name: Build
         env:
-          BUILD_TIME: ${{ steps.now.outputs.time }}
           APP_VERSION: ${{ github.sha }}
         run: npm run build
 
