--- a/.github/workflows/e2e-family.yml
+++ b/.github/workflows/e2e-family.yml
@@ -27,7 +27,8 @@ jobs:
 
     env:
       # App runtime
-      NODE_ENV: production
+      # Use test mode so CI-only dev endpoints are enabled when ALLOW_DEV_ENDPOINTS=1
+      NODE_ENV: test
       NODE_OPTIONS: --max-old-space-size=4096
       NEXTAUTH_URL: http://localhost:3000
       NEXTAUTH_SECRET: testsecret_e2e_123
